# deepfake-detection-inca

./: inference.py  inference_torchscript.py  pyproject.toml  requirements.txt  run.py
deepfake_detection_inca/: loss.py  plots.py
deepfake_detection_inca/dataset/: base.py  deepfake.py
deepfake_detection_inca/encoders/: clip_encoder.py
deepfake_detection_inca/model/: dfdet.py
deepfake_detection_inca/utils/: model_checkpoint.py
